@@ -100,6 +100,11 @@ to the clipboard.</td>
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3380424);return false;">3380424</a></td>
+<td>System Menu 'X' now closes the Edit/View PropertyPages when the database
+is in R-O mode or the entry is protected.</td>
+</tr>
+<tr>
 <td align="center" width="100">n/a</td>
 <td>Filter image in Status bar is no longer replaced by 'Filter1' after changing
 preferences via Manage&rarr;Options.</td>
