@@ -130,6 +130,24 @@ CAddEdit_PropertySheet::~CAddEdit_PropertySheet()
   delete m_pp_pwpolicy;
 }
 
+BEGIN_MESSAGE_MAP(CAddEdit_PropertySheet, CPWPropertySheet)
+  //{{AFX_MSG_MAP(CAddEdit_PropertySheet)
+  ON_WM_SYSCOMMAND()
+  //}}AFX_MSG_MAP
+END_MESSAGE_MAP()
+
+void CAddEdit_PropertySheet::OnSysCommand(UINT nID, LPARAM lParam)
+{
+  const UINT nSysID = nID & 0xFFF0;
+  if (nSysID == SC_CLOSE &&
+      (m_AEMD.uicaller == IDS_VIEWENTRY ||
+      (m_AEMD.uicaller == IDS_EDITENTRY &&  m_AEMD.ucprotected != 0))) {
+    EndDialog(IDCANCEL);
+    return;
+  }
+  CPWPropertySheet::OnSysCommand(nID, lParam);
+}
+
 BOOL CAddEdit_PropertySheet::OnInitDialog()
 {
   CPWPropertySheet::OnInitDialog();
@@ -201,7 +219,7 @@ BOOL CAddEdit_PropertySheet::OnCommand(WPARAM wParam, LPARAM lParam)
   // There is no OnOK for classes derived from CPropertySheet,
   // so we make our own!
   const int iCID = LOWORD(wParam);
-  if (iCID == IDOK || iCID == ID_APPLY_NOW) {
+  if (HIWORD(wParam) == BN_CLICKED && (iCID == IDOK || iCID == ID_APPLY_NOW)) {
     // Don't care what user has done if entry is protected or DB R-O.
     if (m_AEMD.ucprotected != 0 || m_AEMD.uicaller == IDS_VIEWENTRY)
       CPWPropertySheet::EndDialog(IDOK);
