@@ -98,7 +98,7 @@ BOOL COptions_PropertySheet::OnCommand(WPARAM wParam, LPARAM lParam)
 {
   // There is no OnOK for classes derived from CPropertySheet,
   // so we make our own!
-  if (LOWORD(wParam) == IDOK) {
+  if (LOWORD(wParam) == IDOK && HIWORD(wParam) == BN_CLICKED) {
     // First send a message to all loaded pages using base class function.
     // We want them all to update their variables in the Master Data area.
     // And call OnApply() rather than the default OnOK processing
